# deep-learning-framework

./: .gitignore  LICENCE  README.md  demo.py  setup.cfg
dl/: __init__.py  batchnorm.py  dense.py  environment.py  layer.py  model.py
dl/activations/: __init__.py  activation.py  elu.py  leaky_relu.py  relu.py  sigmoid.py  softmax.py  tanh.py
dl/automatic_gradient/: __init__.py  debug.py  utils.py  variable.py
dl/functions/: base.py  debug.py
dl/initializers/: __init__.py  he_normal.py  he_uniform.py  initializer.py  random_normal.py  random_uniform.py  xavier_normal.py  xavier_uniform.py
dl/layers/: __init__.py  dense.py  input.py  layer.py
dl/losses/: __init__.py  bce.py  cce.py  loss.py  mae.py  mse.py
dl/model/: __init__.py  model.py
dl/normalization/: __init__.py  layernorm.py
dl/optimizers/: __init__.py  adam.py  bgd.py  mbgd.py  mgd.py  momentum.py  optimizer.py  rmsprop.py  sgd.py
dl/regularization/: __init__.py  dropout.py  l1.py  l2.py  regularizer.py
dlf/: function.py  sequential.py  trainable.py  trainer.py
dlf/activation_functions/: activation_function.py  elu.py  leaky_relu.py  relu.py  sigmoid.py  tanh.py
dlf/callbacks/: callback.py  history.py
dlf/initializers/: he_normal.py  he_uniform.py  initializer.py  random_normal.py  random_uniform.py  xavier_normal.py  xavier_uniform.py
examples/: autoencoder.ipynb  linear_regression.ipynb  linear_regression.py  logistic_regression.ipynb  logistic_regression.py  multiclass_classification.ipynb  multiclass_classification.py  multilabel_classification.ipynb  multilabel_classification.py
(+45 files in other folders)
