[metadata]
name = dl
version = 1.0.0
author = Mohamed Fouad HANANI
author_email = mohamedfouad.hanani@gmail.com
description = Basic Deep Learning Framework
url = https://github.com/mohamedfouadhanani/deep-learning-framework
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True